--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     <header class="header">
+        <div class="container">
+            <div class="bar">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__name no-margin text-center">Coffee<span class="logo__bold">Blog</span></h1>
+                </a>
+                <nav class="navigation">
+                    <a href="aboutus.html" class="navigation__link">About Us</a>
+                    <a href="courses.html" class="navigation__link">Courses</a>
+                    <a href="contact.html" class="navigation__link">Contact</a>
+                </nav>
+            </div>
+        </div>
         <div class="header__text">
             <h2 class="no-margin">Coffee Blog with tips and courses</h2>
             <p class="no-margin">Learn from the experts with the best recipes and tips</p>
