Finished principal page
Next step is aboutus

--- a/index.html
+++ b/index.html
@@ -75,7 +75,43 @@
         </main>
         <aside class="sidebar">
             <h3>Our Courses and Workshops</h3>
+            <ul class="courses no-padding">
+                <li class="widget-course">
+                    <h4 class="no-margin">Coffee Extraction Techniques</h4>
+                    <p class="widget-course__label">Price:
+                        <span class="widget-course__info">Free</span>
+                    </p>
+                    <p class="widget-course__label">Quota:
+                        <span class="widget-course__info">20</span>
+                    </p>
+                    <a href="entry.html" class="button button--secondary">More Information</a>
+                </li>
+                <li class="widget-course">
+                    <h4 class="no-margin">4 Coffee Recipes for Beginners</h4>
+                    <p class="widget-course__label">Price:
+                        <span class="widget-course__info">Free</span>
+                    </p>
+                    <p class="widget-course__label">Quota:
+                        <span class="widget-course__info">20</span>
+                    </p>
+                    <a href="entry.html" class="button button--secondary">More Information</a>
+                </li>
+            </ul>
         </aside>
     </div>
+    <footer class="footer">
+        <div class="container ">
+            <div class="bar">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__name no-margin text-center">Coffee<span class="logo__bold">Blog</span></h1>
+                </a>
+                <nav class="navigation">
+                    <a href="aboutus.html" class="navigation__link">About Us</a>
+                    <a href="courses.html" class="navigation__link">Courses</a>
+                    <a href="contact.html" class="navigation__link">Contact</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
