--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Coffe Blog"
     <title>Coffee Blog</title>
     <!-- Preload -->
     <link rel="stylesheet" href="css/normalize.css">
@@ -94,7 +95,7 @@
                     <p class="widget-course__label">Quota:
                         <span class="widget-course__info">20</span>
                     </p>
-                    <a href="entry.html" class="button button--secondary">More Information</a>
+                    <a href="entry.html" class="button button--secondary">More Information About This Course</a>
                 </li>
                 <li class="widget-course">
                     <h4 class="no-margin">4 Coffee Recipes for Beginners</h4>
@@ -104,7 +105,7 @@
                     <p class="widget-course__label">Quota:
                         <span class="widget-course__info">20</span>
                     </p>
-                    <a href="entry.html" class="button button--secondary">More Information</a>
+                    <a href="entry.html" class="button button--secondary">More Information About This Course</a>
                 </li>
             </ul>
         </aside>
