--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="header__text">
-            <h2 class="no-margin">Coffee Blog with tips and courses</h2>
+            <h2 id="heading" class="no-margin">Coffee Blog with tips and courses</h2>
             <p class="no-margin">Learn from the experts with the best recipes and tips</p>
         </div>
     </header>
@@ -66,5 +66,6 @@
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
